[gd_scene load_steps=3 format=3 uid="uid://bxodrqghppqsr"]

[ext_resource type="Script" path="res://scripts/new_power_option.gd" id="1_6mm7y"]
[ext_resource type="Texture2D" uid="uid://b55m7xk83hhoi" path="res://assets/graphics/icons/hp.png" id="1_dhxkq"]

[node name="NewPowerOption" type="PanelContainer"]
custom_minimum_size = Vector2(256, 256)
offset_right = 256.0
offset_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6mm7y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "ADD_POWER_REWARD"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
mouse_filter = 1

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/HBoxContainer/CenterContainer/Control"]
texture = ExtResource("1_dhxkq")

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "+ 1"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NewPowerContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
